--- a/css/slyle.css
+++ b/css/slyle.css
@@ -1,4 +1,168 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Raleway:wght@500;700&display=swap");
 
+body{
+    font-family: 'lato', sans-serif;
+    color: #424551;;
+    line-height: 1.6;
+}
+.container{
+    max-width: 1230px;
+    margin: 0 auto;
+}
+.page__title{
+    margin-bottom: 26px;
+    font-size: 46px;
+    left: 1.3;
+    font-weight: 900;
+    color: #1E212C;
+}
 
+.main__text {
+font-weight: 700;
+font-size: 20px;
+line-height: 1.5;
+color: #1E212C;
+margin-bottom: 24px;
+}
 
+.text__wrap{
+    margin-bottom: 48px;
+}
+
+.text{
+    margin-bottom: 22px;
+}
+
+.img__container{
+margin-bottom: 60px;
+}
+.img{
+    margin: 0 auto;
+    display: block;
+
+}
+.accient__text{
+    margin-bottom: 48px;
+}
+
+.accient__text p{
+font-weight: 700;
+font-size: 20px;
+line-height: 1.5;
+background: url('../img/braces.png') 0 0 no-repeat;
+padding-left: 58px;
+}
+
+.list{
+    margin-bottom: 24px;
+}
+
+.list__item{
+    padding-left: 32px;
+    margin-bottom: 4px;
+    background: url('../img/check.png') 0 6px no-repeat;
+}
+
+.list__item:last-child{
+    margin-bottom: 0;
+}
+
+/* ================================================= */
+.homework{
+    outline: 3px dotted yellow;
+    
+}
+
+.title{
+    margin-bottom: 23px;
+    font-family: 'raleway', sans-serif;
+   font-weight: 700;
+    font-size: 24px;
+    text-transform: uppercase;
+    text-align: center;
+    text-decoration: underline;
+    color: red;
+    text-shadow: 1px 3px 5px red;
+}
+
+.title span{
+    font-size: 32px;
+    color: blue;
+    text-decoration: overline;
+    text-shadow: 4px 3px 7px blue;
+    
+}
+
+.homework__text{
+    max-width: 600px;
+    background-color: rgba(255,123,222,0.6);
+    border: 2px solid blue;
+    border-radius: 5px;
+    box-shadow: 3px 8px 9px green;
+    margin: 0 auto;
+    padding: 20px;
+}
+
+.some__text{
+    font-family: 'lato', sans-serif;
+    font-size: 25px;
+    text-decoration: line-through;
+    letter-spacing: 0.3em;
+    color: aquamarine;
+    text-shadow: 3px 4px 9px yellowgreen; 
+
+}
+
+.footer{
+    padding:  20px 0;
+  
+}
+
+.footer__title{
+    color: blue;
+}
+
+.footer__img{
+    min-width: 600px;
+    display: block;
+    margin: 0 auto;
+    border-bottom: 3px double green;
+	border-left: 4px dashed yellow;
+    border-top: 6px solid red;
+    border-radius: 6px;
+    box-shadow: 3px 4px 9px yellowgreen;;
+}
+
+.card{
+    display: flex;
+    gap: 20px;
+    margin-top: 20px;
+
+}
+.card__item{
+    color: azure;
+    text-align: center;
+    width: 300px;
+    height: 300px;
+    background-color: blue;
+    border-radius: 6px;
+}
+
+.card__item:first-child{
+   opacity: 0.2;
+    border-radius: 50%;
+    background-color: red;
+    outline: 2px solid black;
+    box-shadow: 3px 5px 7px black;
+}
+
+.card__item:first-child:hover{
+   opacity: 1;
+}
+
+.card__item:last-child{
+    opacity: 0.5;
+    width: 600px;
+    height: 450px;
+    background-color: green;
+}
